--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ package-lock.json
 .sass-cache
 .env
 cypress/screenshots/
+cypress/snapshots/
+cypress/reports/
+cypress/results/    
 cypress/fixtures/toDelete/
 dist/
 
