--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "faker": "^4.1.0",
     "fetch-mock": "^7.2.5",
     "font-awesome": "^4.7.0",
-    "froala-editor": "^3.0.0-beta.1",
+    "froala-editor": "3.0.0-beta.1",
     "history": "^4.7.2",
     "howler": "^2.1.2",
     "jsxgraph": "^0.99.7",
@@ -96,7 +96,7 @@
     "react-dom": "16.8",
     "react-drag-and-drop": "^2.4.0",
     "react-dropzone": "^10.1.4",
-    "react-froala-wysiwyg": "^3.0.0-beta.1-1",
+    "react-froala-wysiwyg": "3.0.0-beta.1-1",
     "react-google-login": "^5.0.2",
     "react-icons": "^3.1.0",
     "react-joyride": "^2.0.5",
