--- a/packages/evaluators/.babelrc
+++ b/packages/evaluators/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-transform-runtime", "lodash"]
+  "plugins": ["@babel/plugin-transform-runtime", "lodash", "@babel/plugin-proposal-optional-chaining"]
 }
