--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "test:watch": "jest --watch",
     "test:automation-open": "cypress open",
     "test:automation-run": "cypress run",
-    "test:automation-open-dev": "cypress open --env configFile=development",
-    "test:automation-run-dev": "cypress run --env configFile=development",
+    "test:automation-run-poc": "cypress run --env configFile=poc",
+    "test:automation-run-uat": "cypress run --env configFile=uat",
+    "test:automation-run-prod": "cypress run --env configFile=prod",
+    "test:automation-open-poc": "cypress open --env configFile=poc",
+    "test:automation-open-uat": "cypress open --env configFile=uat",
+    "test:automation-open-prod": "cypress open --env configFile=prod",
     "test:visual-regression-open": "cypress open --env configFile=visual-regression,updateSnapshots=true",
     "test:visual-regression-run": "cypress run --env configFile=visual-regression,updateSnapshots=false",
     "test:visual-regression-run:update-base": "cypress run --env configFile=visual-regression,updateSnapshots=true",
