--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vx/text": "^0.0.183",
     "antd": "^3.16.3",
     "axios": "^0.18.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "brace": "^0.11.1",
     "canvas": "^2.4.1",
     "circular-dependency-plugin": "^5.0.2",
