--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dnd-touch-backend": "^0.8.3",
-    "react-dom": "16.8",
+    "react-dom": "^16.8.6",
     "react-drag-and-drop": "^2.4.0",
     "react-dropzone": "^10.1.4",
     "react-froala-wysiwyg": "3.0.0-beta.1-1",
