--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,11 +10,6 @@
     "@edulastic/colors": "1.0.0",
     "@edulastic/icons": "1.0.0",
     "@edulastic/localization": "1.0.0",
-    "antd": "^3.10.7",
-    "prop-types": "^15.6.2",
-    "react-icons": "^3.1.0",
-    "react-quill": "^1.3.3",
-    "react": "16.8",
-    "react-dom": "16.8"
+    "react-quill": "^1.3.3"
   }
 }
