--- a/packages/evaluators/package.json
+++ b/packages/evaluators/package.json
@@ -19,7 +19,9 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/register": "^7.0.0",
     "ava": "1.0.0-rc.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "immer": "^2.1",
+    "axios": "^0.18.0"
   },
   "ava": {
     "files": [
