--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "redux-starter-kit": "^0.5.1",
     "redux-undo": "^0.6.1",
     "reselect": "^3.0.1",
+    "scroll-behavior": "^0.9.10",
     "striptags": "^3.1.1",
     "styled-components": "^3.4.5",
     "uuid": "^3.3.2"
