--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "reselect": "^3.0.1",
     "smoothscroll-polyfill": "^0.4.4",
     "striptags": "^3.1.1",
-    "styled-components": "^3.4.5",
+    "styled-components": "^5.0.0-beta.11",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
