--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "recharts": "^1.4.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
+    "redux-ignore": "^1.2.5",
     "redux-mock-store": "^1.5.3",
     "redux-persist": "^5.10.0",
     "redux-reset": "^0.3.0",
