fix(smoke):fixed cypress smoke suite (#6305)
* fix(smoke):fixed cypress smoke suite

* fix(test-data-cleanup):updated delete order of test and items

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ cypress/snapshots/
 cypress/reports/
 cypress/results/    
 cypress/fixtures/toDelete/
+cypress/.snapshot-report
 dist/
 
 # vi swap files
