--- a/package.json
+++ b/package.json
@@ -169,7 +169,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-dynamic-import-node": "1.2.0",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-lodash": "^3.3.4",
@@ -203,6 +203,8 @@
     "poi": "^12.5.5",
     "prettier": "1.16.1",
     "pretty-quick": "^1.10.0",
+    "react-refresh": "^0.7.0",
+    "react-refresh-webpack-plugin": "https://github.com/pmmmwh/react-refresh-webpack-plugin",
     "redux-logger": "^3.0.6",
     "redux-saga-test-plan": "^3.7.0",
     "rimraf": "^2.6.2",
